creating dev branch to keep gobbledygook separate

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack -d && webpack-dev-server --content-base src/ --inline --hot",
     "bulid:prod": "webpack -p && copy src/index.html dist/index.html",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b master -d build"
   },
   "keywords": [
     "reactjs"
