--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://piterr83.github.io/fuckinlove",
+  "homepage": "https://piterr83.github.io/fuckinlove/",
   "name": "acidemind",
   "version": "1.0.0",
   "description": "Some basic",
