--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack -d && webpack-dev-server --content-base src/ --inline --hot",
     "bulid:prod": "webpack -p && copy src/index.html dist/index.html",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [
     "reactjs"
@@ -30,10 +30,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^3.2.0",
     "gh-pages": "^2.1.1",
+    "style-loader": "^1.0.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
   }
-  
 }
